    That is, 'hostname --fqdn' returned 'localhost.localdomain'.
    (Closes: #316099)
    Programs that access local services at the IP address obtained by
    resolving the system hostname SHOULD NOT DO THIS, but those that
    do so will not be disappointed: most services that listen locally
    listen on all 127/8 addresses, not just on 127.0.0.1.
  [ Joshua Kwan ]
  * Add a netcfg/dhcp_timeout template that can be preseeded in case
    a network or a set of machines are known to take a long time to
    acquire a DHCP lease.
  [ Colin Watson ]
  * Update GPL notices with the FSF's new address.
  * Reword a couple of templates to avoid unnecessary Debian "branding".
  * Close debconf client output when starting the DHCP client, to avoid the
    DHCP client holding it open.

  [ Joey Hess ]
  * Add description for internal-usb template as used for usb net.
  * Fix fallthrough on missing template.

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Aug 2005 17:19:44 -0400

netcfg (1.12) unstable; urgency=low

  [ Joey Hess ]
  * Apply patch from Christian Weeks and Geert Stappers to respect preseeded
    nameserver values. Closes: #315030
  * Similar fix to respect preseeded gateway value. Closes: #314618, #308964
  * Above also Closes: #282650
  * Note that above changes do make netcfg not fill in calculated values if
    the user re-does static network config a second time.
  * Fix spelling of IBM's Hipersocket. Closes: #285124
  * A few interface types seem to be pure product names and not translatable.
    Do not mark these templates as translatable.

  * Updated translations: 
    - Czech (cs.po) by Miroslav Kure
    - French (fr.po) by Christian Perrier
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrişor
    - Slovak (sk.po) by Peter Mann
    - Albanian (sq.po) by Elian Myftiu

 -- Joey Hess <joeyh@debian.org>  Sun, 26 Jun 2005 11:46:23 -0400
